refactor: adopt modern Java idioms across the codebase